# playlist-recommendation

./: .coverage  .gitignore  README.md  itemsets.pickle  model.dockerfile  package.json  pyproject.toml
.github/workflows/: cicd.yml
api/: app.py
client/: client.py
cypress/e2e/integration/: adding-tracks.cy.js  clear-tracks.cy.js  getting-songs-by-playlist.cy.js  playlist-recomender.cy.js  search-playlist-by-song.cy.js  submit-empty-request.cy.js
dockerfiles/: api.dockerfile  frontend.dockerfile  model.dockerfile
frontend/: index.html  script.js  styles.css
kubernetes/: deployment.yml  service.yml
models/: itemsets_generator.py
tests/: app_test.py
tests/e2e/cypress/e2e/: playlist-recommender.cy.js
tests/jest/: front.test.js
tests/unittests/: app_test.py
