[tool.poetry]
name = "project-name"
version = "1.0"
description = ""
authors = ["Henrique Lisboa <hlisboasousa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.0"
pandas = "^1.3.3"
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
